# SrvLib

./: BaseSrv.cpp  BaseSrv.h  CMakeLists.txt  ExampleSrv.cpp  ExampleSrv.vcxproj  ExampleSrv.vcxproj.filters  FilesysNotify.h  LICENSE  Makefile  README.md  ServMain.cpp  Service.h  SrvCtrl.cpp  SrvCtrl.h  SrvLib.sln  SrvLib.vcxproj  SrvLib.vcxproj.filters  appveyor.yml  example.service
.github/workflows/: codeql.yml
init.d/: examplesrv
